# QtWorks

./: README.md
Caclculator/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc
Encriptify/: CMakeLists.txt  backend.cpp  backend.h  interfaceForDecryption.cpp  interfaceForDecryption.h  interfaceForDecryption.ui  interfaceForEncryption.cpp  interfaceForEncryption.h  interfaceForEncryption.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc  xtea.cpp  xtea.h
screenshot_application/: CMakeLists.txt  main.cpp
